# embeddings_generator

./: README.md  generate_embeddings.py  pyproject.toml  requirements.txt  setup.py
embeddings_generator/: __init__.py  generate_embeddings.py
