[project]
name = "embeddings-generator"
version = "0.1.0"
description = "a package to generate embeddings from entries"
authors = [
    {name = "Reporter.ai (http://reporterai.org)",email = "reporter.ai@boldcode.io"}
]
license = {text = "AGPL v3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "tqdm>=4.66.3",
    "transformers>=4.48.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
